# Demolition

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Data.json  english_chapters.json  english_quiz.json  math_chapters.json  math_quiz.json  science_chapters.json  science_quiz.json  sst_chapters.json  sst_quiz.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/anim/: fade_in_slide_up.xml  funky_card_anim.xml  pulse_scale.xml  slide_bounce_left.xml  slide_bounce_right.xml  slide_in_up.xml  slide_left_infinite.xml  slide_right_infinite.xml  slide_up.xml  typewriter_in.xml
app/src/main/res/color/: nav_item_color.xml  switch_track_color.xml
app/src/main/res/drawable/: appbar_bg.xml  avatar_selector.xml  book.xml  bottom_nav_bg.xml  btn_cyber.xml  btn_next.xml  btn_primary.xml  card_bg.xml  card_white.xml  chapter_card_bg.xml  circle_bg.xml  course.xml  course_card.xml  error_toast_bg.xml  gradient_overlay_funky.xml  ic_arrow_right.xml  info_toast_bg.xml  notification.xml  option_bg.xml  progress.xml  progress_bar_blue.xml  quiz.xml  quiz_card_bg.xml  quiz_item_bg.xml  rounded_blue_card.xml  rounded_edittext.xml  science.xml  send.xml  spinner_background.xml  spinner_funky.xml  spinner_neon.xml  success_toast_bg.xml
app/src/main/res/layout/: activity_ai_chatter.xml  activity_chapter_viewer.xml  activity_custom_ai.xml  activity_edit_profile.xml  activity_english.xml  activity_login.xml  activity_main.xml  activity_math.xml  activity_quiz_questions.xml  activity_science.xml  activity_signup.xml  activity_splash_screen.xml  activity_sst.xml  activity_user_data.xml  appbar.xml  header.xml  (+22 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+71 files in other folders)
